--- a/caruusel.css
+++ b/caruusel.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   
 }
+.lala{
+  transition: transform 0.3s ease-in-out;
+}
 
 
 body {
@@ -14,15 +17,16 @@ body {
   padding: 0;
   line-height: 1.6;
   color: #333;
+  
 }
 
 
+/* Estilos para la sección Liderazgo */
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
-
 
 .lider {
   display: flex;
@@ -80,19 +84,19 @@ body {
 }
 
 .liderazgo h2 {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #29a6af; /* Color principal */
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #29a6af; /* Color principal */
 }
 
 .liderazgo .descripcion {
-    text-align: center;
-    font-size: 1.1rem;
-    color: #666;
-    max-width: 800px;
-    margin: 0 auto 40px;
-    line-height: 1.6;
+  text-align: center;
+  font-size: 1.1rem;
+  color: #666;
+  max-width: 800px;
+  margin: 0 auto 40px;
+  line-height: 1.6;
 }
 
 
@@ -119,8 +123,10 @@ body {
   
 }
 
-
-
+.swiper-slide{
+  height: auto !important; /* Anula el height: 100% */
+display: flex !important; /* Anula el display: block */
+}
 
 
 
@@ -132,17 +138,23 @@ body {
   opacity: 0.5;
   
 }
+
 .slider-wrapper .swiper-pagination-bullet-active {
   opacity: 1;
 }
+
+
 .slider-wrapper .swiper-slide-button {
   color: #fff;
   margin-top: -55px;
   transition: 0.2s ease;
 }
+
 .slider-wrapper .swiper-slide-button:hover {
   color: #4658ff;
 }
+
+
 @media (max-width: 768px) {
 
   
